Finalize Version. Completed all parts.

--- a/src/components/feature/feature.css
+++ b/src/components/feature/feature.css
@@ -50,7 +50,7 @@
 @media screen and (max-width: 550px) {
   .gpt3__features-container__feature-title h1 {
     font-size: 14px;
-    line-height: 22;
+    line-height: 22px;
   }
   .gpt3__features-container__feature-title p {
     font-style: 12px;
